--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,18 +13,8 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-
-    - name: Install .NET 7.0
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '7.0.x'
-
-    - name: Build, Test, Pack, Publish
-      shell: bash
-      run: |
-        dotnet tool install -g dotnet-releaser
-        dotnet-releaser run --nuget-token "${{secrets.NUGET_TOKEN}}" --github-token "${{secrets.GITHUB_TOKEN}}" src/dotnet-releaser.toml
+      - name: "Build, Test, Pack and Publish"
+        uses: xoofx/.github/.github/actions/dotnet-releaser-action@main
+        with:
+          dotnet-version: '8.0'
+          NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
